# Nomad

./: .gitignore  README.md  analyze_residency_dump.py  compare_exr_ssim.cpp  compare_exr_ssim.py  compare_runs.py  visualize_active_nodes_plot.py  visualize_bvh.py  visualize_gpu_memory_plot.py  visualize_intersections_html.py  visualize_intersections_plot.py  visualize_metrics.py  visualize_performance_plot.py  visualize_probabilities.py  visualize_residency_html.py
Benchmarks/: README.md  UnifiedNeuralActiveLearning.md  UnifiedNeuralRuntime.md  analyze_baseline_memory_excess.py  analyze_bistro_sweep.py  analyze_cpu_residency_correlation.py  analyze_gpu_residency_correlation.py  analyze_observer_baseline_excess.py  analyze_timing_residency.py  build_rayhit_teacher_labels.py  compare_aligned_quality.py  compare_benchmark_csvs.py  compare_unified_neural_mlps.py  denoise_exr_batch.py  export_unified_neural_model.py  generate_neural_ablation_manifest.py  merge_neural_label_csvs.py  metrics_20251010_135951.csv  metrics_20251010_140601.csv  metrics_20251010_140633.csv  metrics_20251010_141055.csv  metrics_20251010_141857.csv  metrics_20251013_154442.csv  metrics_20251013_154906.csv  metrics_20251013_155926.csv  metrics_20251013_161050.csv  metrics_20251013_172019.csv  (+83 more)
tests/: AlwaysResidentCacheTests.cpp  CMakeLists.txt  DeferredPurgeQueueTests.cpp  IncrementalUpdateUtilsTests.cpp  ProbabilisticResidencyTests.cpp  ReSTIRResidencyTests.cpp  ResidencyBudgetTests.cpp  ResidencyTestsMain.cpp  TlasScratchTrackerTests.cpp  test_light_export.py  test_node_export_image.py
(+465 files in other folders)
